--- a/demo/pages/index/index.wxml
+++ b/demo/pages/index/index.wxml
@@ -7,5 +7,34 @@
       <image mode="widthFix" class="image" src="{{item.image_src}}"></image>
     </swiper-item>
   </swiper>
-
+  <!-- 分类导航 -->
+  <view class="index_cate">
+    <navigator wx:for="{{catesList}}" wx:key="name">
+      <image mode="widthFix" src="{{item.image_src}}"></image>
+    </navigator>
+  </view>
+  <!-- 楼层 -->
+  <view class="index_floor">
+    <view class="floor_group"
+      wx:for="{{getfloorList}}"
+      wx:for-item="item1"
+      wx:for-index="index1"
+      wx:key="name">
+      <!-- 标题 -->
+      <view class="floor_title">
+        <image src="{{item1.floor_title.image_src}}" mode="widthFix"></image>
+      </view>
+      <!-- 内容 -->
+      <view class="floor_list">
+        <navigator
+          wx:for="{{item1.product_list}}"
+          wx:for-item="item2"
+          wx:for-index="index2"
+          wx:key="name"
+        >
+          <image src="{{item2.image_src}}" mode="{{index2===0?'widthFix':'scaleToFill'}}"></image>
+        </navigator>
+      </view>
+    </view>
+  </view>
 </view>
