--- a/demo/pages/index/index.wxss
+++ b/demo/pages/index/index.wxss
@@ -1,10 +1,47 @@
 /* view{
   color: var(--themeColor);
 } */
-.swiper{
+.swiper {
   width: 750rpx;
-  height: 340rpx
+  height: 340rpx;
 }
-.image{
+.image {
   width: 100%;
+}
+.index_cate {
+  display: flex;
+  padding: 20rpx;
+}
+.index_cate navigator {
+  flex: 1;
+}
+.index_cate navigator image {
+  width: 100%;
+}
+.index_floor .floor_group .floor_title {
+  padding: 10rpx 0;
+}
+.index_floor .floor_group .floor_title image {
+  width: 100%;
+}
+.index_floor .floor_group .floor_list {
+  overflow: hidden;
+}
+.index_floor .floor_group .floor_list navigator {
+  float: left;
+  width: 33.33%;
+}
+.index_floor .floor_group .floor_list navigator:nth-last-child(-n+4) {
+  height: 27.72711207vw;
+  border-left: 10rpx #fff solid;
+}
+.index_floor .floor_group .floor_list navigator:nth-child(2) {
+  border-bottom: 10rpx #fff solid;
+}
+.index_floor .floor_group .floor_list navigator:nth-child(3) {
+  border-bottom: 10rpx #fff solid;
+}
+.index_floor .floor_group .floor_list navigator image {
+  width: 100%;
+  height: 100%;
 }
