--- a/demo/pages/category/index.wxml
+++ b/demo/pages/category/index.wxml
@@ -1,2 +1,34 @@
-<!--pages/category/index.wxml-->
-<text>pages/category/index.wxml</text>
+<!-- pages/category/index.wxml -->
+<view class="cates">
+  <Search></Search>
+  <view class="cates_container" hover-class="none" hover-stop-propagation="false">
+    <!-- 左侧 -->
+    <scroll-view class="left_menu" scroll-y>
+      <view bindtap="handleitem" data-index="{{index}}" wx:for="{{leftMenuList}}" wx:key="index" class="menu_item {{index===currentIndex?'active':''}}">{{item}}</view>
+    </scroll-view>
+    <!-- 右侧 -->
+    <scroll-view class="right_content" scroll-y>
+      <view class="goods_group" wx:for="{{rightCountent}}" wx:key="index1" wx:for-index="index1" wx:for-item="item1">
+        <view class="goods_title">
+          <text class="delimiter" selectable="false" space="false" decode="false">
+                        /
+                    </text>
+          <text class="title" selectable="false" space="false" decode="false">
+                        {{item1.cat_name}}
+                    </text>
+          <text class="delimiter" selectable="false" space="false" decode="false">
+                       / 
+                    </text>
+        </view>
+        <view class="goods_list">
+          <navigator wx:for="{{item1.children}}" wx:for-item="itme2" wx:for-index="index2" wx:key="cat_id">
+            <image class="" src="{{itme2.cat_icon}}" mode="widthFix"></image>
+            <view class="goods_name" hover-class="none" hover-stop-propagation="false">
+              {{itme2.cat_name}}
+            </view>
+          </navigator>
+        </view>
+      </view>
+    </scroll-view>
+  </view>
+</view>
