--- a/demo/pages/category/index.wxml
+++ b/demo/pages/category/index.wxml
@@ -7,7 +7,7 @@
       <view bindtap="handleitem" data-index="{{index}}" wx:for="{{leftMenuList}}" wx:key="index" class="menu_item {{index===currentIndex?'active':''}}">{{item}}</view>
     </scroll-view>
     <!-- 右侧 -->
-    <scroll-view class="right_content" scroll-y>
+    <scroll-view scroll-top="{{scrollTop}}" class="right_content" scroll-y>
       <view class="goods_group" wx:for="{{rightCountent}}" wx:key="index1" wx:for-index="index1" wx:for-item="item1">
         <view class="goods_title">
           <text class="delimiter" selectable="false" space="false" decode="false">
