--- a/demo/pages/category/index.wxml
+++ b/demo/pages/category/index.wxml
@@ -21,7 +21,7 @@
                     </text>
         </view>
         <view class="goods_list">
-          <navigator wx:for="{{item1.children}}" wx:for-item="itme2" wx:for-index="index2" wx:key="cat_id">
+          <navigator url="/pages/goods_list/index?cid={{itme2.cat_id}}" wx:for="{{item1.children}}" wx:for-item="itme2" wx:for-index="index2" wx:key="cat_id">
             <image class="" src="{{itme2.cat_icon}}" mode="widthFix"></image>
             <view class="goods_name" hover-class="none" hover-stop-propagation="false">
               {{itme2.cat_name}}
