--- a/demo/pages/goods_list/index.wxml
+++ b/demo/pages/goods_list/index.wxml
@@ -1,2 +1,23 @@
-<!--pages/goods_list/index.wxml-->
-<text>pages/goods_list/index.wxml</text>
+<!-- pages/goods_list/index.wxml -->
+<Search></Search>
+<!-- 监听事件 -->
+<Tabs tabs="{{tabs}}" bindtabsItme="tabsItemchange">
+    <!-- <block wx:if="{{tabs[index].isActive}}" wx:for="{{tabs}}" wx:key="id"></block> -->
+    <block wx:if="{{tabs[0].isActive}}">
+        <view class="first_tab">
+            <navigator class="goods_item">
+                <!-- 左侧 -->
+                <view class="goods_img_warp">
+                    <image mode="widthFix" src="http://image1.suning.cn/uimg/b2c/newcatentries/0070134290-000000000149003877_1_800x800.jpg"></image>
+                </view>
+                <!-- 右侧 -->
+                <view class="goods_info_wrap">
+                    <view class="goods_name">经典武士大马士革直刀(微型)</view>
+                    <view class="goods_price">3500</view>
+                </view>
+            </navigator>
+        </view>
+    </block>
+    <block wx:elif="{{tabs[1].isActive}}"></block>
+    <block wx:elif="{{tabs[2].isActive}}"></block>
+</Tabs>
