--- a/demo/pages/goods_list/index.wxml
+++ b/demo/pages/goods_list/index.wxml
@@ -5,19 +5,20 @@
     <!-- <block wx:if="{{tabs[index].isActive}}" wx:for="{{tabs}}" wx:key="id"></block> -->
     <block wx:if="{{tabs[0].isActive}}">
         <view class="first_tab">
-            <navigator class="goods_item">
+            <navigator class="goods_item" wx:for="{{goodsLis}}" wx:key="goods_id">
                 <!-- 左侧 -->
                 <view class="goods_img_warp">
-                    <image mode="widthFix" src="http://image1.suning.cn/uimg/b2c/newcatentries/0070134290-000000000149003877_1_800x800.jpg"></image>
+                    <!-- 默认图片 -->
+                    <image mode="widthFix" src="{{item.goods_small_logo?item.goods_small_logo:'http://image4.suning.cn/uimg/b2c/newcatentries/0000000000-000000000606013705_1_800x800.jpg'}}"></image>
                 </view>
                 <!-- 右侧 -->
                 <view class="goods_info_wrap">
-                    <view class="goods_name">经典武士大马士革直刀(微型)</view>
-                    <view class="goods_price">3500</view>
+                    <view class="goods_name">{{item.goods_name}}</view>
+                    <view class="goods_price">{{item.goods_price}}</view>
                 </view>
             </navigator>
         </view>
     </block>
-    <block wx:elif="{{tabs[1].isActive}}"></block>
-    <block wx:elif="{{tabs[2].isActive}}"></block>
+    <block wx:elif="{{tabs[1].isActive}}">2</block>
+    <block wx:elif="{{tabs[2].isActive}}">3</block>
 </Tabs>
