--- a/demo/pages/goos_detail/index.less
+++ b/demo/pages/goos_detail/index.less
@@ -48,11 +48,55 @@
     }
 }
 
-.goods_info{
-    .goods_info_title{
+.goods_info {
+    .goods_info_title {
         font-size: 32rpx;
         color: var(--themeColor);
         font-weight: 600;
         padding: 20rpx;
+    }
+}
+
+
+.btm_tool {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 90rpx;
+    background: #fff;
+    display: flex;
+
+    .tool_item {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .btn_cart {
+        flex: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background:#ffa500 ;
+        color: #fff;
+        font-size:30rpx;
+        font-weight: 600;
+    }
+
+    .btn_buy {
+        flex: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background:#eb4450 ;
+        color: #fff;
+        font-size:30rpx;
+        font-weight: 600;
     }
 }
