--- a/demo/pages/goos_detail/index.wxss
+++ b/demo/pages/goos_detail/index.wxss
@@ -42,3 +42,42 @@
   font-weight: 600;
   padding: 20rpx;
 }
+.btm_tool {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 90rpx;
+  background: #fff;
+  display: flex;
+}
+.btm_tool .tool_item {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.btm_tool .btn_cart {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #ffa500;
+  color: #fff;
+  font-size: 30rpx;
+  font-weight: 600;
+}
+.btm_tool .btn_buy {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #eb4450;
+  color: #fff;
+  font-size: 30rpx;
+  font-weight: 600;
+}
