--- a/demo/pages/goos_detail/index.less
+++ b/demo/pages/goos_detail/index.less
@@ -49,6 +49,7 @@
 }
 
 .goods_info {
+    padding-bottom: 90rpx;
     .goods_info_title {
         font-size: 32rpx;
         color: var(--themeColor);
@@ -67,13 +68,23 @@
     height: 90rpx;
     background: #fff;
     display: flex;
-
+    border-top: 1rpx #ccc solid;
     .tool_item {
         flex: 1;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        font-size: 23rpx;
+        position: relative;
+        button{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+        }
     }
 
     .btn_cart {
