--- a/demo/pages/goos_detail/index.wxml
+++ b/demo/pages/goos_detail/index.wxml
@@ -28,15 +28,17 @@
   <view class="tool_item">
     <view class="iconfont iconkefu"></view>
     <view>客服</view>
+    <button open-type="contact">1</button>
   </view>
   <view class="tool_item">
-    <view class="iconfont iconkefu"></view>
-    <view>店铺</view>
-  </view>
-  <view class="tool_item">
-    <view class="iconfont iconkefu"></view>
-    <view>收藏</view>
-  </view>
+    <view class="iconfont iconfenxiang"></view>
+    <view>分享</view>
+    <button open-type="share"></button>
+  </view> 
+  <navigator open-type="switchTab" url="/pages/cart/index" class="tool_item">
+    <view class="iconfont iconqicheqianlian-"></view>
+    <view>购物车</view>
+  </navigator>
   <view class="tool_item btn_cart">
     加入购物车
   </view>
