--- a/demo/pages/goos_detail/index.wxss
+++ b/demo/pages/goos_detail/index.wxss
@@ -36,6 +36,9 @@
   align-items: center;
   border-left: 1px #000 solid;
 }
+.goods_info {
+  padding-bottom: 90rpx;
+}
 .goods_info .goods_info_title {
   font-size: 32rpx;
   color: var(--themeColor);
@@ -51,6 +54,7 @@
   height: 90rpx;
   background: #fff;
   display: flex;
+  border-top: 1rpx #ccc solid;
 }
 .btm_tool .tool_item {
   flex: 1;
@@ -58,6 +62,16 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 23rpx;
+  position: relative;
+}
+.btm_tool .tool_item button {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
 }
 .btm_tool .btn_cart {
   flex: 2;
