--- a/demo/pages/cart/index.wxml
+++ b/demo/pages/cart/index.wxml
@@ -1,2 +1,5 @@
-<!--pages/cart/index.wxml-->
-<text>pages/cart/index.wxml</text>
+<view class="revice_address_row">
+    <view class="address_btn">
+        <button bind:tap="handleChooseAddress" type="primary" plain>获取收获地址</button>
+    </view>
+</view>
