--- a/demo/pages/goos_detail/index.wxml
+++ b/demo/pages/goos_detail/index.wxml
@@ -39,7 +39,7 @@
     <view class="iconfont iconqicheqianlian-"></view>
     <view>购物车</view>
   </navigator>
-  <view class="tool_item btn_cart">
+  <view bindtap="handleCartAdd" class="tool_item btn_cart">
     加入购物车
   </view>
   <view class="tool_item btn_buy">
