--- a/demo/pages/cart/index.less
+++ b/demo/pages/cart/index.less
@@ -7,3 +7,131 @@
         }
     }
 }
+
+.user_info_row{
+    display: flex;
+    padding: 20rpx;
+    .user_info{
+        flex: 5;
+    }
+    .user_phone{
+        flex: 3;
+        text-align: right;
+    }
+}
+
+.cart_content{
+    .cart_title{
+        padding: 20rpx;
+        font-size: 36rpx;
+        color: var(--themeColor);
+        border-top: 1rpx solid currentColor;
+        border-bottom: 1rpx solid currentColor;
+    }
+    .cart_main{
+        .cart_item{
+            display: flex;
+            padding: 10rpx;
+            border-bottom: 1rpx #eee solid;
+            // align-items: center;
+            .cart_chk_wrap{
+                flex: 1;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .cart_img_wrap{
+                flex: 2;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                image{
+                    width: 80%;
+                }
+            }
+            .cart_info_wrap{
+                flex: 4;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                .goods_name{
+                    display: -webkit-box;
+                    overflow: hidden;
+                    -webkit-box-orient: vertical;
+                    -webkit-line-clamp: 2;
+                    color: #666;
+                }
+                .goods_price_wrap{
+                    display: flex;
+                    justify-content: space-between;
+                    .goods_price{
+                        color: var(--themeColor);
+                        font-size: 34rpx;
+                    }
+                    .cart_num_tool{
+                        display: flex;
+                        .num_edit{
+                            width: 55rpx;
+                            height: 55rpx;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            border: 1rpx solid #ccc;
+                        }
+                        .goods_num{
+                            width: 55rpx;
+                            height: 55rpx;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.footer_tool{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 90rpx;
+    background: #fff;
+    display: flex;
+    border-top: 1rpx #ccc solid;
+    .all_chk_wrap{
+        flex: 2;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .total_perice_wrap{
+        flex: 5;
+        text-align: right;
+        padding-right: 15rpx;
+
+        .total_price{
+            .total_price_text{
+                color: var(--themeColor);
+                font-size: 34rpx;
+                font-weight: 600
+            }
+        }
+    }
+    .order_pay_wrap{
+        flex: 3;
+        background: var(--themeColor);
+        color: #Fff;
+        font-size: 32rpx;
+        font-weight: 600;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+page{
+    padding-bottom: 90rpx;
+}
