--- a/demo/pages/cart/index.less
+++ b/demo/pages/cart/index.less
@@ -55,6 +55,7 @@
                 flex-direction: column;
                 justify-content: space-around;
                 .goods_name{
+                    word-break:break-all;
                     display: -webkit-box;
                     overflow: hidden;
                     -webkit-box-orient: vertical;
