--- a/demo/pages/cart/index.wxml
+++ b/demo/pages/cart/index.wxml
@@ -15,23 +15,23 @@
 <view class="cart_content">
     <view class="cart_title">购物车</view>
     <view class="cart_main">
-        <view class="cart_item">
+        <view class="cart_item" wx:for="{{cart}}" wx:key="index">
             <view class="cart_chk_wrap">
-                <checkbox-group bindchange="">
-                    <checkbox></checkbox>
+                <checkbox-group data-id="{{item.goods_id}}" bindchange="handeItemChange">
+                    <checkbox checked="{{item.checked}}"></checkbox>
                 </checkbox-group>
             </view>
             <navigator class="cart_img_wrap">
-                <image mode="widthFix" class="" src="https://p.qpic.cn/mttcircle/0/512fdb49b228c1248m101257i101652783_201907w02_81e33114341e6eea1a2393e0a6d1a6e1.jp/0"></image>
+                <image mode="widthFix" class="" src="{{item.goods_small_logo}}"></image>
             </navigator>
             <view class="cart_info_wrap">
-                <view class="goods_name">dfsdfsdfdsf</view>
+                <view class="goods_name">{{item.goods_name}}</view>
                 <view class="goods_price_wrap">
-                    <view class="goods_price">444</view>
+                    <view class="goods_price">{{item.goods_price}}</view>
                     <view class="cart_num_tool">
-                        <view class="num_edit">-</view>
-                        <view class="goods_num">10</view>
-                        <view class="num_edit">+</view>
+                        <view bind:tap="handleItemNumEdit" data-id="{{item.goods_id}}" data-oper="{{-1}}" class="num_edit">-</view>
+                        <view class="goods_num">{{item.num}}</view>
+                        <view bind:tap="handleItemNumEdit" data-id="{{item.goods_id}}" data-oper="{{1}}" class="num_edit">+</view>
                     </view>
                 </view>
             </view>
@@ -40,17 +40,17 @@
 </view>
 <view class="footer_tool">
     <view class="all_chk_wrap">
-        <checkbox-group bindchange="">
-            <checkbox>全选</checkbox>
+        <checkbox-group bindchange="handleItemAllCheck">
+            <checkbox checked="{{allChecked}}">全选</checkbox>
         </checkbox-group>
     </view>
     <view class="total_perice_wrap">
         <view class="total_price">
             合计:
-            <text class="total_price_text">￥999</text>
+            <text class="total_price_text">￥{{totalPrice}}</text>
             
         </view>
         <view>包含运费</view>
     </view>
-    <view class="order_pay_wrap">结算(2)</view>
+    <view class="order_pay_wrap">结算({{totalNum}})</view>
 </view>
